[package]
name = "actix-web-prom"
version = "0.6.0-beta.4"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2021"
description = "Actix-web middleware to expose Prometheus metrics"
documentation = "https://docs.rs/actix-web-prom"
repository = "https://github.com/nlopes/actix-web-prom.git"
keywords = ["actix", "actix-web", "middleware", "prometheus", "web"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"
exclude = [".gitignore", ".travis.yml"]

[badges]
travis-ci = { repository = "nlopes/actix-web-prom", branch = "master" }

[dependencies]
actix-web = { version = "=4.0.0-beta.19", default-features = false }
futures = "^0.3"
pin-project = "^1.0"
prometheus = { version = "^0.13", default-features = false }
