[package]
name = "actix-web-prom"
version = "0.6.0"
authors = ["Norberto Lopes <nlopes.ml@gmail.com>"]
edition = "2021"
description = "Actix Web middleware to expose Prometheus metrics"
documentation = "https://docs.rs/actix-web-prom"
repository = "https://github.com/nlopes/actix-web-prom.git"
keywords = ["actix", "actix-web", "middleware", "prometheus", "web"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"
exclude = [".gitignore", ".github/", "README.tpl", "examples/"]

[dependencies]
actix-web = { version = "4.0", default-features = false, features = ["macros"] }
futures-core = "0.3"
pin-project-lite = "0.2"
prometheus = { version = "0.13", default-features = false }
regex = "^1.4"
